[project]
name = "middle-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhangzhi", email = "781029588@qq.com"},
]
dependencies = [
    "fastapi>=0.110.1",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "uvicorn>=0.29.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
